--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,9 @@
 <footer class="footer">
-  <a class="footer_item" href="/thanks">ack.</a>
-  <a class="footer_item" href="javascript::void(0)">resume</a>
-  <a class="footer_item" href="/feed.xml">rss</a>
+  <!--<a class="footer_item" href="/thanks">ack.</a>-->
+  <!--<a class="footer_item" href="javascript::void(0)">resume</a>-->
+  <!--<a class="footer_item" href="/feed.xml">rss</a>-->
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
-  <small class="footer_copyright">
-    <!-- Klisé Theme: https://github.com/piharpi/jekyll-klise -->
+  <!--<small class="footer_copyright">
     <a
       href="https://github.com/piharpi/jekyll-klise"
       target="_blank"
@@ -15,7 +14,7 @@
     <a href="https://jekyllrb.com" target="_blank" rel="noreferrer noopener"
       >jekyll</a
     >
-  </small>
+  </small>-->
 </footer>
 <script src="/assets/js/main.js" defer="defer"></script>
 {%- if site.google_analytics -%}
